force-app/main/default/objects/Case/fields/Applicable_Product__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product__c</fullName>
    <label>Applicable Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Vehicle Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>