force-app/main/default/objects/Case/fields/Complaint_Natures__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Natures__c</fullName>
    <label>Complaint Natures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Applicable_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nature01 (V)</fullName>
            </value>
            <value>
                <fullName>Nature02 (L)</fullName>
            </value>
            <value>
                <fullName>Nature03 (LV)</fullName>
            </value>
            <value>
                <fullName>Nature04 (C)</fullName>
            </value>
            <value>
                <fullName>Nature05 (CV)</fullName>
            </value>
            <value>
                <fullName>Nature06 (CL)</fullName>
            </value>
            <value>
                <fullName>Nature07 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature08 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature09 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature10 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature11 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature12 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature13 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature14 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature15 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature16 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature17 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature18 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature19 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature20 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature21 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature22 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature23 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature24 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature25 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature26 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature27 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature28 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature29 (CLV)</fullName>
            </value>
            <value>
                <fullName>Nature30 (CLV)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>