force-app/main/default/objects/Case/validationRules/CASE002_Cannot_Reopen_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>CASE002_Cannot_Reopen_Case</fullName>
    <active>true</active>
    <description>Cases that are closed cannot be reopened [CASE002]</description>
    <errorConditionFormula>AND(
  AND(
     Text(Status) != &quot;Closed&quot;,
     Text(PRIORVALUE(Status)) = &quot;Closed&quot;
  ),
  NOT( $Permission.Bypass_Case_Validation_Rules )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Cases that are closed cannot be reopened [CASE002]</errorMessage>
</ValidationRule>